--- a/miniverse/css/style.css
+++ b/miniverse/css/style.css
@@ -1,18 +1,32 @@
 body{
-    background-color: blueviolet;
+    background-color: #001d2b;
     margin: 0;
 }
 
-
-/*Principal do Site*/
-.div_especial_site{
-
+/*Header*/
+.a_li_header{
+    color: aliceblue;
 }
 
+/*Principal do Site*/
 .div_diferencial_site{
     background-color: aqua;
     border-radius: 30px;
 
+    margin-left: auto;
+    margin-right: auto;
+
     width: 300px;
     height: 400px;
+}
+
+.div_marcas{
+    background-color: aquamarine;
+    border-radius: 40px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 150px;
+    height: 150px;
 }
