--- a/miniverse/css/produtos.css
+++ b/miniverse/css/produtos.css
@@ -2,16 +2,19 @@ body {
     background-color: #001d2b;
     margin: 0;
 }
+
 /* HEADER */
-.line{
-    width: 100%;
-    height: 4px;
-    background-color: #00ff99;
+.line {
+  width: 100%;
+  height: 4px;
+  background: #005A7F;
+  background: linear-gradient(79deg, rgba(0, 90, 127, 1) 0%, rgba(23, 146, 123, 1) 45%, rgba(44, 197, 120, 1) 100%);
 }
 
 .a_li_header {
-   color: aliceblue !important;          
-  text-decoration: none;     /* Tira o sublinhado */
+  color: aliceblue !important;
+  text-decoration: none;
+  /* Tira o sublinhado */
   margin-right: 15px;
   transition: color 0.3s;
 }
@@ -27,18 +30,26 @@ body {
 
 .dropdown-item.a_li_header:hover {
   color: #00ff99 !important;
-  background-color: rgba(255, 255, 255, 0.1) !important; /* leve destaque */
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  /* leve destaque */
 }
 
 .dropmenu-marcas {
-    background-color: #092e2b;
-    border-radius: 15px;
+  background-color: #092e2b;
+  border-radius: 15px;
 }
 
 .miniverse {
-    color: aliceblue;
-    font-size: 22px;
-    margin-bottom: 5px;
+  color: aliceblue;
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+/*perfil*/
+
+.test:focus {
+  border-color: #00ff99 !important;
+  box-shadow: #00ff99 !important;
 }
 /*Principal da página*/
 /*Destaque para a marca clicada*/
@@ -46,6 +57,5 @@ body {
     transition: box-shadow 0.3s, transform 0.3s;
 }
 .marca-section.destaque{
-    box-shadow: 0 0 20px 5px rgba(255,215,0,0.8);
     transform: scale(1.02);
 }
