--- a/miniverse/css/teste.css
+++ b/miniverse/css/teste.css
@@ -8,8 +8,13 @@ body {
   margin: 0;
   background-color: #001d2b;
   color: aliceblue;
+  font-family: 'Ruda', sans-serif;
 }
 
+@font-face {
+  font-family: 'Ruda';
+  src: url(../css/fonts/Ruda-VariableFont_wght.ttf) format('truetype');
+}
 /* HEADER */
 .line {
   width: 100%;
@@ -50,7 +55,7 @@ body {
   color: aliceblue;
   font-size: 22px;
   margin-bottom: 5px;
-} 
+}
 
 /* ======== CONTEÚDO PRINCIPAL ======== */
 .logo {
@@ -75,7 +80,43 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 32px;
+  margin-left: 130px;
 }
+
+/*Badges*/
+
+.badge {
+  display: inline-block;
+  padding: 4px 8px;
+  border-radius: 8px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: white;
+  margin-right: 6px;
+}
+
+.badge-premium {
+  background-color: #c0392b;  
+}
+.badge-colecionavel {
+  background-color: #FF8269;
+}
+.badge-detalhes {
+  background-color: #16a085;
+}
+.badge-hero{
+  background-color: #F5C827;
+}
+.badge-pintura{
+  background-color:#57128A ;
+}
+.badge-db{
+  background-color: orange;
+}
+.badge-dc{
+  background-color: #2980b9;
+}
+
 
 .galeria {
   flex: 1;
@@ -84,7 +125,6 @@ body {
 
 .galeria img {
   width: 100%;
-  border: 1px solid #ccc;
   border-radius: 4px;
 }
 
@@ -204,7 +244,6 @@ body {
 .select2-container--default .select2-selection--single {
   background-color: #fff !important;
   border: 1px solid #ccc !important;
-  height: 38px !important;
   display: flex !important;
   align-items: center !important;
   border-radius: 6px !important;
@@ -313,11 +352,11 @@ body {
   margin-right: 8px;
 }
 
-.pq_escolher{
+.pq_escolher {
   margin-top: 12px;
 }
 
-.pq_escolher strong{
+.pq_escolher strong {
   color: #999999;
 }
 
@@ -335,7 +374,7 @@ body {
   color: #d0d0d0;
 }
 
-.acompanha strong{
+.acompanha strong {
   color: #2d9b68;
 }
 
